# libmacchina

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  android_props  build.rs  file
.github/workflows/: libmacchina.yml
src/: dirs.rs  enums.rs  extra.rs  lib.rs  sysinfo_ffi.rs  traits.rs  winman.rs
src/android/: mod.rs  sysinfo_ffi.rs  system_properties.rs
src/freebsd/: mod.rs  sysinfo_ffi.rs
src/linux/: battery.rs  bindings.rs  ffi.rs  general.rs  graphical.rs  kernel.rs  memory.rs  mod.rs  network.rs  package.rs  pci_devices.rs  processor.rs  product.rs  sysinfo_ffi.rs  x11_ffi.rs
src/macos/: mach_ffi.rs  mod.rs
src/netbsd/: mod.rs  x11_ffi.rs
src/openwrt/: mod.rs  sysinfo_ffi.rs
src/shared/: mod.rs
src/windows/: mod.rs
