[package]
name = "libmacchina"
version = "5.0.3"
authors = ["grtcdr <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>", "Uttarayan Mondal <email@uttarayan.me>"]
edition = "2018"
description = "A library that can fetch all sorts of system information."
keywords = ["system", "fetch", "library"]
repository = "https://github.com/Macchina-CLI/libmacchina"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
cfg-if = "1.0.0"
libc = { version = "0.2.112", optional = true }
home = { version = "0.5.3", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
if-addrs = { version = "0.7.0", optional = true }

[target.'cfg(any(target_os="freebsd", target_os = "linux"))'.dependencies]
sqlite = { version = "0.26.0", optional = true }

[target.'cfg(any(target_os="freebsd", target_os = "netbsd"))'.dependencies]
x11rb = { version = "0.9.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
dirs = { version = "4.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
os-release = { version = "0.1", optional = true }

[target.'cfg(target_os = "netbsd")'.dependencies]
nix = "0.23.1"
regex = "1.5.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"
core-graphics = "0.22.3"
mach = "0.3.2"

[target.'cfg(target_family = "unix")'.dependencies]
num_cpus = { version = "1.13.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
local-ip-address = "0.4.4"
which = "4.2.2"
winreg = "0.10.1"
windows = { version = "0.29.0", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming"
] }
wmi = "0.9.2"

[target.'cfg(any(target_os = "linux", target_os = "netbsd", target_os = "android"))'.dependencies]
itertools = { version = "0.10.3", optional = true }

[target.'cfg(not(any(target_os = "netbsd", target_os = "windows")))'.dependencies]
sysctl = { version = "0.4.3", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.build-dependencies]
pkg-config = { version = "0.3.24", optional = true}

[build-dependencies.vergen]
version = "6.0.0"
optional = true
default-features = false
features = ["build","cargo","git","rustc"]

[features]
default = ["general", "kernel", "memory", "network", "package", "product", "graphical", "processor"]
general = ["libc", "os-release", "x11rb", "dirs", "sysctl"]
kernel  = ["libc", "sysctl"]
memory  = []
network = ["if-addrs"]
package = ["sqlite", "walkdir", "home"]
product = ["itertools", "home"]
battery = []
processor = ["num_cpus", "libc"]
graphical = ["libc", "dirs"]

openwrt = []
version = ["vergen", "pkg-config"]
