[package]
name = "libmacchina"
version = "7.2.3"
authors = ["grtcdr <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>", "Uttarayan Mondal <email@uttarayan.me>"]
edition = "2021"
description = "A library that can fetch all sorts of system information."
keywords = ["system", "fetch", "library"]
repository = "https://github.com/Macchina-CLI/libmacchina"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.148"
home = "0.5.5"
pciid-parser = "0.6.3"

[build-dependencies.vergen]
version = "8.2.6"
optional = true
default-features = false
features = ["build","cargo","git","gitcl","rustc"]

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0.1"
walkdir = "2.4.0"
os-release = "0.1"
regex = "1.9.2"
rpm-pkg-count = { version = "0.2.1", features = ["runtime"] }
nix = { version = "0.26.2", features = ["socket"], default-features = false }
wayland-sys = { version = "0.31.1", features = ["dlopen", "client"] }

[target.'cfg(target_os = "netbsd")'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["hostname"] }
regex = "1.9.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.23.1"
core-video-sys = "0.1.4"
mach2 = "0.4.1"

[target.'cfg(target_family = "unix")'.dependencies]
num_cpus = "1.16.0"

[target.'cfg(target_os = "windows")'.dependencies]
local-ip-address = "0.5.6"
wmi = "0.12.0"
winreg = "0.10.1"
windows = { version = "0.39.0", features = [
      "Win32_Foundation",
      "Win32_System_Power",
      "Win32_System_SystemInformation",
      "Win32_System_WindowsProgramming"
]}

[target.'cfg(not(target_os = "windows"))'.dependencies]
if-addrs = "0.10.2"

[target.'cfg(any(target_os="freebsd", target_os = "linux"))'.dependencies]
sqlite = "0.31.1"

[target.'cfg(any(target_os="freebsd", target_os = "netbsd"))'.dependencies]
x11rb = "0.12.0"

[target.'cfg(any(target_os = "linux", target_os = "netbsd", target_os = "android"))'.dependencies]
itertools = "0.11.0"

[target.'cfg(not(any(target_os = "netbsd", target_os = "windows")))'.dependencies]
sysctl = "0.5.4"

[target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.build-dependencies]
pkg-config = { version = "0.3.27", optional = true}

[features]
openwrt = []
version = ["vergen"]
